// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterButton /> renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#fff",
      "borderColor": "#e5e5e5",
      "borderWidth": 1,
      "flexBasis": "30%",
      "flexGrow": 1,
      "marginRight": 5,
      "opacity": 1,
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "textAlign": "center",
        "textTransform": "capitalize",
      }
    }
  >
    OK
  </Text>
</View>
`;

exports[`<FilterButton /> renders correctly when active 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "#eee",
      "borderColor": "#d5d5d5",
      "borderWidth": 1,
      "flexBasis": "30%",
      "flexGrow": 1,
      "marginRight": 5,
      "opacity": 1,
      "paddingVertical": 10,
    }
  }
>
  <Text
    style={
      {
        "textAlign": "center",
        "textTransform": "capitalize",
      }
    }
  >
    OK
  </Text>
</View>
`;
